@@ -1,10 +1,12 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/iwl1000-ucode/Attic/iwl1000-ucode-39.31.5.1.ebuild,v 1.3 2011/09/18 21:41:28 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/iwl1000-ucode/Attic/iwl1000-ucode-39.31.5.1.ebuild,v 1.4 2011/09/24 13:46:13 ulm Exp $
 
 EAPI=4
-MY_P="iwlwifi-1000-ucode-${PV}"
 
+inherit linux-info
+
+MY_P="iwlwifi-1000-ucode-${PV}"
 DESCRIPTION="Intel (R) Wireless WiFi Link 1000BGN ucode"
 HOMEPAGE="http://intellinuxwireless.org/?p=iwlwifi"
 SRC_URI="http://intellinuxwireless.org/iwlwifi/downloads/${MY_P}.tgz"
@@ -17,6 +19,15 @@ IUSE=""
 RDEPEND="|| ( >=sys-fs/udev-096 >=sys-apps/hotplug-20040923 )"
 
 S="${WORKDIR}/${MY_P}"
+
+pkg_pretend() {
+	if kernel_is lt 2 6 39; then
+		ewarn "Your kernel version is ${KV_MAJOR}.${KV_MINOR}.${KV_PATCH}."
+		ewarn "This microcode image requires a kernel >= 2.6.39."
+		ewarn "For kernel versions < 2.6.39, you may unmask and install"
+		ewarn "${CATEGORY}/${PN}-128.50.3.1 instead."
+	fi
+}
 
 src_install() {
 	insinto /lib/firmware
