@@ -1,6 +1,9 @@
 # ChangeLog for net-wireless/iwl1000-ucode
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/iwl1000-ucode/Attic/ChangeLog,v 1.9 2011/09/23 07:00:30 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/iwl1000-ucode/Attic/ChangeLog,v 1.10 2011/09/24 13:46:13 ulm Exp $
+
+  24 Sep 2011; Ulrich Mueller <ulm@gentoo.org> iwl1000-ucode-39.31.5.1.ebuild:
+  Output a warning in pkg_pretend if the kernel is too old, bug 384125.
 
   23 Sep 2011; Ulrich Mueller <ulm@gentoo.org>
   +iwl1000-ucode-128.50.3.1.ebuild:
